--- a/squareproduct.html
+++ b/squareproduct.html
@@ -951,18 +951,19 @@
   </style>
   <nav class="navbar">
     <ul class="nav-links">
-      <li class="nav-item"><a href="/">Home</a></li>
-      <li class="nav-item"><a href="/#products">Products</a></li>
-      <li class="nav-item"><a href="/#help">Help</a></li>
-      <li class="nav-item"><a href="/#about">About</a></li>
+      <li class="nav-item"><a href="">Home</a></li>
+      <li class="nav-item"><a href="unlim8ted.com/main#products">Products</a></li>
+      <li class="nav-item"><a href="unlim8ted.com/main#help">Help</a></li>
+      <li class="nav-item"><a href="unlim8ted.com/main#about">About</a></li>
       <li class="nav-item dropdown">
         <a href="javascript:void(0)" class="dropbtn">More</a>
         <div class="dropdown-content">
-          <a href="/#portfolio">Portfolio</a>
-          <a href="/#contact">Contact</a>
-          <a href="/#blog">Blog</a>
-          <a href="/live-chat">Live Chat</a>
-          <a href="/live-game">Live Chat and Game</a>
+          <a href="unlim8ted.com/main#portfolio">Portfolio</a>
+          <a href="unlim8ted.com/main#contact">Contact</a>
+          <a href="unlim8ted.com/main#blog">Blog</a>
+          <a href="unlim8ted.com/live-chat">Live Chat</a>
+          <a href="unlim8ted.com/live-game">Live Chat and Game</a>
+          <a href="unlim8ted.com/puzzle-squares">Puzzle Squares</a>
         </div>
       </li>
     </ul>
