--- a/products.html
+++ b/products.html
@@ -294,21 +294,23 @@
 <body>
     <nav class="navbar">
         <ul class="nav-links">
-            <li class="nav-item"><a href="/">Home</a></li>
-            <li class="nav-item"><a href="/#products">Products</a></li>
-            <li class="nav-item"><a href="/#help">Help</a></li>
-            <li class="nav-item"><a href="/#about">About</a></li>
-            <li class="nav-item dropdown">
-                <a href="javascript:void(0)" class="dropbtn">More</a>
-                <div class="dropdown-content">
-                    <a href="/#portfolio">Portfolio</a>
-                    <a href="/#contact">Contact</a>
-                    <a href="/#blog">Blog</a>
-                    <a href="/live-chat">Live Chat</a>
-                </div>
-            </li>
+          <li class="nav-item"><a href="">Home</a></li>
+          <li class="nav-item"><a href="unlim8ted.com/main#products">Products</a></li>
+          <li class="nav-item"><a href="unlim8ted.com/main#help">Help</a></li>
+          <li class="nav-item"><a href="unlim8ted.com/main#about">About</a></li>
+          <li class="nav-item dropdown">
+            <a href="javascript:void(0)" class="dropbtn">More</a>
+            <div class="dropdown-content">
+              <a href="unlim8ted.com/main#portfolio">Portfolio</a>
+              <a href="unlim8ted.com/main#contact">Contact</a>
+              <a href="unlim8ted.com/main#blog">Blog</a>
+              <a href="unlim8ted.com/live-chat">Live Chat</a>
+              <a href="unlim8ted.com/live-game">Live Chat and Game</a>
+              <a href="unlim8ted.com/puzzle-squares">Puzzle Squares</a>
+            </div>
+          </li>
         </ul>
-    </nav>
+      </nav>
     <svg class="waves" id="header-back" style="z-index: 1; position:absolute; top:-270px"
         xmlns="http://www.w3.org/2000/svg" width="1440" height="321.75" viewBox="0 200 960 214.5"
         preserveAspectRatio="xMinYMid meet">
