--- a/chat.html
+++ b/chat.html
@@ -1,554 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Script Generator</title>
+    <title>Feature Removed</title>
     <style>
-        .no-dark-change {
-            animation-name: inherit;
-        }
-
-        .no-dark-change.dark-mode {
-            animation-name: inherit;
-            color: inherit;
-        }
-
-        .renameBtn {
-            width: 25px;
-            margin: 0;
-            left: 80%;
-            z-index: 2;
-            /*! display:unset; */
-            margin-top: -44px;
-            
-        }
-
         body {
             font-family: Arial, sans-serif;
+            text-align: center;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5;
-            color: #20232a;
-            transition: background-color 0.3s, color 0.3s;
-            display: flex;
-            min-height: 100vh;
-            flex-direction: column;
+            background-color: #f9f9f9;
         }
-
-        .dark-mode {
-            background-color: #20232a;
-            color: #f5f5f5;
-        }
-
-        .navbar {
-            background-color: #20232a;
-            padding: 1rem;
-        }
-
-        .navbar.light-mode {
-            background-color: #ffffff;
-        }
-
-        .nav-links {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-        }
-
-        .nav-item {
-            margin: 0 1rem;
-        }
-
-        .nav-item a {
-            color: #61dafb;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        .navbar.light-mode .nav-item a {
-            color: #20232a;
-        }
-
-        .nav-item a:hover {
-            text-decoration: underline;
-        }
-
-        .dropbtn {
-            cursor: pointer;
-        }
-
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #20232a;
-            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-            z-index: 1;
-        }
-
-        .dropdown-content.light-mode {
-            background-color: #ffffff;
-            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-        }
-
-        .dropdown-content a {
-            color: #61dafb;
-            text-decoration: none;
-            display: block;
-            padding: 12px 16px;
-        }
-
-        .dropdown-content.light-mode a {
-            color: #20232a;
-        }
-
-        .dropdown-content a:hover {
-            background-color: #575757;
-        }
-
-        .navbar.light-mode .dropdown-content a:hover {
-            background-color: #e0e0e0;
-        }
-
-        .nav-item:hover .dropdown-content {
-            display: block;
-        }
-
         .container {
-            padding: 2rem;
-            display: flex;
-            flex: 1;
-            justify-content: space-between;
+            margin-top: 10%;
         }
-
-        .content {
-            flex: 3;
-            background: #ffffff;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            padding: 2rem;
-            transition: background-color 0.3s, color 0.3s;
+        h1 {
+            color: #ff0000;
+            font-size: 2.5em;
         }
-
-        .content.dark-mode {
-            background: #20232a;
+        p {
+            font-size: 1.2em;
+            color: #333;
         }
-
-        h1,
-        h5 {
-            color: #20232a;
-        }
-
-        .content.dark-mode h1,
-        .content.dark-mode h5 {
-            color: #f5f5f5;
-        }
-
-        .input-group {
-            margin-bottom: 1rem;
-        }
-
-        .input-group label {
-            display: block;
-            margin-bottom: 0.5rem;
-        }
-
-        input,
-        textarea {
-            width: 100%;
-            padding: 0.5rem;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-
-        .input-group input {
-            background-color: #f5f5f5;
-        }
-
-        .input-group textarea {
-            background-color: #f5f5f5;
-        }
-
-        .button {
-            background-color: #61dafb;
-            color: #20232a;
+        button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 1em;
+            background-color: #007BFF;
+            color: white;
             border: none;
-            padding: 0.5rem 1rem;
-            border-radius: 4px;
             cursor: pointer;
-            font-size: 1rem;
-            transition: background-color 0.3s;
+            border-radius: 5px;
         }
-
-        .button:hover {
-            background-color: #21a1f1;
-        }
-
-        .button.dark-mode {
-            background-color: #61dafb;
-            color: #20232a;
-        }
-
-        .button.dark-mode:hover {
-            background-color: #21a1f1;
-        }
-
-        .hidden {
-            display: none;
-        }
-
-        #loading {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: rgba(0, 0, 0, 0.8);
-            color: #fff;
-            padding: 1rem;
-            border-radius: 8px;
-            z-index: 1000;
-            animation: fadeInOut 2s infinite;
-        }
-
-        @keyframes fadeInOut {
-            0% {
-                opacity: 0;
-            }
-
-            50% {
-                opacity: 1;
-            }
-
-            100% {
-                opacity: 0;
-            }
-        }
-
-        #savedScriptsList {
-            list-style: none;
-            padding: 0;
-            width: 200px;
-            background: #ffffff;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .script-item {
-            padding: 0.5rem;
-            border-bottom: 1px solid #ccc;
-            cursor: pointer;
-            color: black;
-            width: 75%;
-        }
-
-        .script-item:hover {
-            background-color: #e0e0e0;
-        }
-
-        .script-item.active {
-            background-color: #d0d0d0;
-        }
-
-        /* Bubble styles */
-        .bubble {
-            background: #ffffff;
-            border-radius: 15px;
-            padding: 1rem;
-            margin-bottom: 1rem;
-            max-width: 60%;
-            position: relative;
-            display: inline-block;
-        }
-
-        .bubble.dark-mode {
-            background: #3a3a3a;
-            color: #ffffff;
-        }
-
-        .bubble:before {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 10px;
-            width: 0;
-            height: 0;
-            border-width: 10px;
-            border-style: solid;
-        }
-
-        .bubble-light:before {
-            border-color: #ffffff transparent transparent transparent;
-            border-bottom-color: transparent;
-            border-left-color: transparent;
-            border-right-color: transparent;
-            border-bottom: 10px solid #ffffff;
-        }
-
-        .bubble-dark:before {
-            border-color: #3a3a3a transparent transparent transparent;
-            border-bottom-color: transparent;
-            border-left-color: transparent;
-            border-right-color: transparent;
-            border-bottom: 10px solid #3a3a3a;
-        }
-
-        /* Updated styles for the saved scripts list */
-        #savedScriptsList {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            background-color: #00000000;
-        }
-
-        #savedScriptsList.dark-mode {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            background-color: #00000000;
-        }
-
-        .txt {
-            color: white
-        }
-
-        .script-item {
-            padding: 0.5rem;
-            margin-bottom: 0.5rem;
-            border-radius: 15px;
-            cursor: pointer;
-            background-color: #e0e0e0;
-            position: relative;
-        }
-
-        .script-item.dark-mode {
-            background-color: #fcf7f7;
-        }
-
-        .script-item:hover {
-            background-color: #d0d0d0;
-        }
-
-        .script-item.active {
-            background-color: #c0c0c0;
-        }
-
-        .script-item.dark-mode.active {
-            background-color: #555;
+        button:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
-
 <body>
-    <nav class="navbar">
-        <ul class="nav-links">
-            <li class="nav-item"><a href="/">Home</a></li>
-            <li class="nav-item"><a href="/#products">Products</a></li>
-            <li class="nav-item"><a href="/#help">Help</a></li>
-            <li class="nav-item"><a href="/#about">About</a></li>
-            <li class="nav-item dropdown">
-                <a href="javascript:void(0)" class="dropbtn">More</a>
-                <div class="dropdown-content">
-                    <a href="/#portfolio">Portfolio</a>
-                    <a href="/#contact">Contact</a>
-                    <a href="/#blog">Blog</a>
-                    <a href="/live-chat">Live Chat</a>
-                </div>
-            </li>
-        </ul>
-    </nav>
     <div class="container">
-        <div class="content">
-            <h1 class="text-center">Script Generator</h1>
-            <h5 class="text-center">(be patient it may take a while and is generating even if it doesnt seem like it.)</h3>
-            <div class="input-group">
-                <label for="prompt">Enter Prompt:</label>
-                <input id="prompt" placeholder="Type your prompt here...">
-            </div>
-            <button id="generateBtn" class="button">Generate Script</button>
-            <div id="generatedScriptContainer" class="hidden">
-                <h5>Generated Script:</h5>
-                <textarea id="generatedScript" readonly></textarea>
-                <button id="continueBtn" class="button">Continue Script</button>
-                <button id = "downloadBtn" data-filename="script" class="button">Download Script</button>
-            </div>
-        </div>
-        <div id="savedScriptsContainer" class="no-dark-change">
-            <h5 id="text">Saved Scripts:</h5>
-            <ul id="savedScriptsList">
-                {% for script in scripts %}
-                <li class="script-item" data-filename="{{script}}">
-                    {{ script }}
-                </li>
-                <li class="script-item renameBtn" style="width:25px;" data-filename="{{ script }}">📝</li>
-                {% endfor %}
-            </ul>
-        </div>
+        <h1>Sorry!</h1>
+        <p>Due to security concerns, we have decided to remove this feature.</p>
+        <p>If you were submitting feedback, you can instead send it to <a href="mailto:contact@unlim8ted.com">contact@unlim8ted.com</a>.</p>
+        <p>If you were looking for help, you can contact <a href="mailto:support@unlim8ted.com">support@unlim8ted.com</a>.</p>
+        <p>If you want this feature re-added and happen to be a web developer, you can contact <a href="mailto:enquiries@unlim8ted.com">enquiries@unlim8ted.com</a> if you want to help.</p>
+        <button onclick="history.back()">Go Back</button>
     </div>
-    <div id="loading">Loading...</div>
-    <button id="toggleMode" class="button">Switch to Dark Mode</button>
-
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
-        $(document).ready(function () {
-
-
-            // Toggle dark mode
-            $('#toggleMode').click(function () {
-                $('body').toggleClass('dark-mode');
-                $('.navbar').toggleClass('light-mode');
-                $('.dropdown-content').toggleClass('light-mode');
-                $('.content').toggleClass('dark-mode');
-                //$('#savedScriptsList').toggleClass('dark-mode');
-                $('#toggleMode').text($('body').hasClass('dark-mode') ? 'Switch to Light Mode' : 'Switch to Dark Mode');
-                $('#text').toggleClass('txt')
-            });
-
-            // Generate script
-            $('#generateBtn').click(function () {
-                const prompt = $('#prompt').val().trim();
-                if (!prompt) {
-                    alert('Please enter a prompt.');
-                    return;
-                }
-                $('#loading').show();
-                $.ajax({
-                    url: '/generate',
-                    type: 'POST',
-                    contentType: 'application/json',
-                    data: JSON.stringify({ prompt }),
-                    success: function (data) {
-                        $('#generatedScript').val(data.script);
-                        $('#generatedScriptContainer').show();
-                        $('#loading').hide();
-                        $('#downloadBtn').data("filename", prompt);
-                        
-                        loadScripts(); // Reload the list of scripts
-                    },
-                    error: function (xhr) {
-                        alert(xhr.responseJSON.error);
-                    }
-                });
-            });
-
-            // Continue script
-            $('#continueBtn').click(function () {
-                const content = $('#generatedScript').val().trim();
-                const filename = $('#savedScriptsList .active').data('filename');
-
-                if (!content || !filename) {
-                    alert('Please generate or select a script to continue.');
-                    return;
-                }
-
-                $.ajax({
-                    url: '/continue',
-                    type: 'POST',
-                    contentType: 'application/json',
-                    data: JSON.stringify({ content, filename }),
-                    success: function (data) {
-                        $('#generatedScript').val(content + "\n" + data.continuation);
-                        loadScripts(); // Reload the list of scripts
-                    },
-                    error: function (xhr) {
-                        alert(xhr.responseJSON.error);
-                    }
-                });
-            });
-            $('#downloadBtn').click(function () {
-                const scriptContent = $('#generatedScript').val().trim();
-                if (!scriptContent) {
-                    alert('No script available to download.');
-                    return;
-                }
-
-                // Create a Blob with the script content
-                const blob = new Blob([scriptContent], { type: 'text/plain' });
-                const url = URL.createObjectURL(blob);
-
-                // Create a temporary anchor element to trigger the download
-                const a = document.createElement('a');
-                a.href = url;
-                const filename = $(this).data('filename');
-                if (!filename.endsWith(".txt")){
-                    filename = filename + ".txt"
-                }
-                a.download = filename; // filename
-                document.body.appendChild(a);
-                a.click();
-                document.body.removeChild(a);
-
-                // Revoke the object URL after the download
-                URL.revokeObjectURL(url);
-            });
-
-
-            // Load script from sidebar
-            $('#savedScriptsList').on('click', '.script-item', function () {
-                const filename = $(this).data('filename') + '.txt';
-                console.log(filename);
-                $.ajax({
-                    url: '/load_script',
-                    type: 'POST',
-                    contentType: 'application/json',
-                    data: JSON.stringify({ filename }),
-                    success: function (data) {
-                        $('#generatedScript').val(data.content);
-                        $('#generatedScriptContainer').show();
-                        $('#savedScriptsList .script-item').removeClass('active');
-                        $(`[data-filename="${filename}"]`).addClass('active');
-                        $('#downloadBtn').data("filename", filename);
-                        $('#continueBtn').show(); // Show continue button when script is loaded
-                    },
-                    error: function (xhr) {
-                        alert(xhr.responseJSON.error);
-                    }
-                });
-            });
-
-            // Rename script
-            $('.renameBtn').click(function () {
-                const oldFilename = $(this).data('filename');
-                if (!oldFilename) {
-                    alert('Please select a script to rename.');
-                    return;
-                }
-
-                var newFilename = prompt('Enter the new filename:', oldFilename);
-                if (!newFilename) {
-                    return; // User canceled the prompt
-                }
-                newFilename = newFilename + ' .txt'
-                $.ajax({
-                    url: '/rename',
-                    type: 'POST',
-                    contentType: 'application/json',
-                    data: JSON.stringify({ "old_filename": oldFilename, "new_filename": newFilename }),
-                    success: function (data) {
-                       // loadScripts(); // Refresh the list of scripts
-                        $('#generatedScriptContainer').hide(); // Hide the script display area
-                        alert('Script renamed successfully.');
-                        // Update all matching list items and data attributes
-                        $('#savedScriptsList .script-item').each(function () {
-                            const $this = $(this);
-                            if ($this.data('data-filename=') === oldFilename) {
-                                $this.data('data-filename=', newFilename);
-                                $this.text(newFilename);
-                            }
-                        });
-                    },
-                    error: function (xhr) {
-                        alert(xhr.responseJSON.error);
-                    }
-                });
-            });
-
-        });
-
-    </script>
 </body>
-
 </html>
