--- a/products.html
+++ b/products.html
@@ -294,7 +294,7 @@
 <body>
     <nav class="navbar">
         <ul class="nav-links">
-          <li class="nav-item"><a href="">Home</a></li>
+          <li class="nav-item"><a href="/">Home</a></li>
           <li class="nav-item"><a href="main#products">Products</a></li>
           <li class="nav-item"><a href="main#help">Help</a></li>
           <li class="nav-item"><a href="main#about">About</a></li>
