--- a/50x.html
+++ b/50x.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
 <title>Error</title>
 <style>
 html { color-scheme: light dark; }
