--- a/buy.html
+++ b/buy.html
@@ -96,6 +96,8 @@
 <body>
     <header>
         <h1>Buy Now</h1>
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
     </header>
 
     <main>
