--- a/puzzle-squares.html
+++ b/puzzle-squares.html
@@ -254,6 +254,8 @@
         color: white;
       }
     </style>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
   </head>
 <html>
     <nav class="navbar">
