--- a/textadventurecreator.html
+++ b/textadventurecreator.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
 <head>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
 	<script src="ned.js"></script>
 	<script src="https://bumbu.me/svg-pan-zoom/dist/svg-pan-zoom.min.js"></script>
 	<script>// Load different node types and attach event listeners for them
