--- a/cart.html
+++ b/cart.html
@@ -109,6 +109,8 @@
             animation: slideIn 0.5s forwards;
         }
     </style>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
 </head>
 
 <body>
