--- a/success.html
+++ b/success.html
@@ -47,6 +47,8 @@
             background-color: #0056b3;
         }
     </style>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
 </head>
 <body>
     <div class="container">
