--- a/squareproduct.html
+++ b/squareproduct.html
@@ -950,25 +950,25 @@
       /* Remove the border if not needed */
     }
   </style>
-  <nav class="navbar">
-    <ul class="nav-links">
-      <li class="nav-item"><a href=" ">Home</a></li>
-      <li class="nav-item"><a href="main#products">Products</a></li>
-      <li class="nav-item"><a href="main#help">Help</a></li>
-      <li class="nav-item"><a href="main#about">About</a></li>
-      <li class="nav-item dropdown">
-        <a href="javascript:void(0)" class="dropbtn">More</a>
-        <div class="dropdown-content">
-          <a href="main#portfolio">Portfolio</a>
-          <a href="main#contact">Contact</a>
-          <a href="main#blog">Blog</a>
-          <a href="live-chat">Live Chat</a>
-          <a href="live-game">Live Chat and Game</a>
-          <a href="puzzle-squares">Puzzle Squares</a>
-        </div>
-      </li>
-    </ul>
-  </nav>
+    <nav class="navbar">
+      <ul class="nav-links">
+        <li class="nav-item"><a href=" ">Home</a></li>
+        <li class="nav-item"><a href="#products">Products</a></li>
+        <li class="nav-item"><a href="#help">Help</a></li>
+        <li class="nav-item"><a href="#about">About</a></li>
+        <li class="nav-item dropdown">
+          <a href="javascript:void(0)" class="dropbtn">More</a>
+          <div class="dropdown-content">
+            <a href="#portfolio">Portfolio</a>
+            <a href="#contact">Contact</a>
+            <a href="#blog">Blog</a>
+            <a href="live-chat">Live Chat</a>
+            <a href="live-game">Live Chat and Game</a>
+            <a href="puzzle-squares">Puzzle Squares</a>
+          </div>
+        </li>
+      </ul>
+    </nav>
 
   <div class="embed-container">
     <embed class="full-screen-embed" src="@product url@">
