--- a/products.html
+++ b/products.html
@@ -297,15 +297,15 @@
     <nav class="navbar">
         <ul class="nav-links">
           <li class="nav-item"><a href=" ">Home</a></li>
-          <li class="nav-item"><a href="main#products">Products</a></li>
-          <li class="nav-item"><a href="main#help">Help</a></li>
-          <li class="nav-item"><a href="main#about">About</a></li>
+          <li class="nav-item"><a href="#products">Products</a></li>
+          <li class="nav-item"><a href="#help">Help</a></li>
+          <li class="nav-item"><a href="#about">About</a></li>
           <li class="nav-item dropdown">
             <a href="javascript:void(0)" class="dropbtn">More</a>
             <div class="dropdown-content">
-              <a href="main#portfolio">Portfolio</a>
-              <a href="main#contact">Contact</a>
-              <a href="main#blog">Blog</a>
+              <a href="#portfolio">Portfolio</a>
+              <a href="#contact">Contact</a>
+              <a href="#blog">Blog</a>
               <a href="live-chat">Live Chat</a>
               <a href="live-game">Live Chat and Game</a>
               <a href="puzzle-squares">Puzzle Squares</a>
