--- a/index.html
+++ b/index.html
@@ -263,19 +263,19 @@
 <body>
   <nav class="navbar">
     <ul class="nav-links">
-      <li class="nav-item"><a href=" ">Home</a></li>
-      <li class="nav-item"><a href="#products">Products</a></li>
-      <li class="nav-item"><a href="#help">Help</a></li>
-      <li class="nav-item"><a href="#about">About</a></li>
+      <li class="nav-item"><a href="/">Home</a></li>
+      <li class="nav-item"><a href="/#products">Products</a></li>
+      <li class="nav-item"><a href="/#help">Help</a></li>
+      <li class="nav-item"><a href="/#about">About</a></li>
       <li class="nav-item dropdown">
         <a href="javascript:void(0)" class="dropbtn">More</a>
         <div class="dropdown-content">
-          <a href="#portfolio">Portfolio</a>
-          <a href="#contact">Contact</a>
-          <a href="#blog">Blog</a>
-          <a href="live-chat">Live Chat</a>
-          <a href="live-game">Live Chat and Game</a>
-          <a href="puzzle-squares">Puzzle Squares</a>
+          <a href="/#portfolio">Portfolio</a>
+          <a href="/#contact">Contact</a>
+          <a href="/#blog">Blog</a>
+          <a href="/live-chat">Live Chat</a>
+          <a href="/live-game">Live Chat and Game</a>
+          <a href="/puzzle-squares">Puzzle Squares</a>
         </div>
       </li>
     </ul>
@@ -287,7 +287,7 @@
     <body>
       <div id="inner-wrap">
         <div class="logo" style="z-index: 2;">
-          <a href="#home">
+          <a href="/">
             <img src="images/logo/logo.png"> <!--https://images.unlim8ted.com/logo/logo.png-->
           </a>
         </div>
@@ -438,7 +438,7 @@
         <h2>Games</h2>
         <p>Play fun and challenging games.</p>
       </a>
-      <a href="/s/shop" class="product-box">
+      <a href="shop" class="product-box">
         <img src="images/products/clothes-image.jpg" alt="Clothes">
         <h2>Physical Items</h2>
         <p>Check out our stylish clothes.</p>
