--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
   <div id="help" class="content-section">
     <h1>Help</h1>
     <p>If you need assistance, please check our FAQs or contact our support team for further help.</p>
-    <p>Email us at: <a href="mailto:help@unlim8ted.com">help@unlim8ted.com</a></p>
+    <p>Email us at: <a href="mailto:support@unlim8ted.com">support@unlim8ted.com</a></p>
     <form action="/submit_form" method="post">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required>
