add software image and SP page

--- a/index.html
+++ b/index.html
@@ -444,9 +444,9 @@
         <p>Check out our stylish clothes.</p>
       </a>
       <a href="#software" class="product-box">
-        <img src="images/products/software-image.jpg" alt="Software">
+        <img src="https://github.com/Unlim8ted-Studio-Productions/Square-Pixels/blob/main/src/Recources/program%20recources/Screenshot%202023-09-21%20181742.png?raw=true" alt="Software">
         <h2>Software</h2>
-        <p>Explore our software products.</p>
+        <p>Explore our apps and video games.</p>
       </a>
       <a href="#AI" class="product-box">
         <img src="images/products/ai-image.jpg" alt="AI">
