--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
     <p>Discover our amazing products.</p>
     <div class="product-category">
       <a href="#films" class="product-box">
-        <img src="images/products/film-image.jpg" alt="Films">
+        <img src="images\products\films\The Life of a Meatball.jpg" alt="Films">
         <h2>Films</h2>
         <p>Explore our latest films.</p>
       </a>
@@ -434,12 +434,12 @@
         <p>Read our latest books.</p>
       </a>
       <a href="#games" class="product-box">
-        <img src="images/products/games-image.jpg" alt="Games">
+        <img src="\images\products\games\image.webp" alt="Games">
         <h2>Games</h2>
         <p>Play fun and challenging games.</p>
       </a>
       <a href="shop" class="product-box">
-        <img src="images/products/clothes-image.jpg" alt="Clothes">
+        <img src="\images\products\clothes\image.webp" alt="Clothes">
         <h2>Physical Items</h2>
         <p>Check out our stylish clothes.</p>
       </a>
@@ -524,7 +524,7 @@
     </div>
     <div class="item-category" id="music-items">
       <a href="squareproduct#https://unlim8ted-studio-productions.square.site/product/the-life-of-a-meatball-jigsaw-puzzle/20" class="item-box" data-category="puzzles">
-        <img src="images/products/rock-music.jpg" alt="">
+        <img src="\images\products\games\image.webp" alt="">
         <h3>The Life of a Meatball Puzzle</h3>
       </a>
       <a href="/puzzle-squares" class="item-box" data-category="puzzles">
@@ -614,7 +614,7 @@
     </div>
     <div class="item-category" id="software-items">
       <a href="products#Square-Pixels" class="item-box" data-category="entertainment">
-        <img src="images/products/square-pixels.jpg" alt="Square Pixels">
+        <img src="https://github.com/Unlim8ted-Studio-Productions/Square-Pixels/blob/main/src/Recources/program%20recources/Screenshot%202023-09-21%20181742.png?raw=true" alt="Square Pixels">
         <h3>Square Pixels</h3>
       </a>
 
