added navbar to sp

--- a/square-pixels.html
+++ b/square-pixels.html
@@ -117,6 +117,27 @@
     height: auto;
     }
   </style>
+    <link rel="stylesheet" href="styles.css">
+
+    <nav class="navbar">
+      <ul class="nav-links">
+        <li class="nav-item"><a href="/">Home</a></li>
+        <li class="nav-item"><a href="/#products">Products</a></li>
+        <li class="nav-item"><a href="/#help">Help</a></li>
+        <li class="nav-item"><a href="/#about">About</a></li>
+        <li class="nav-item dropdown">
+          <a href="javascript:void(0)" class="dropbtn">More</a>
+          <div class="dropdown-content">
+            <a href="/#portfolio">Portfolio</a>
+            <a href="/#contact">Contact</a>
+            <a href="/#blog">Blog</a>
+            <a href="/live-chat">Live Chat</a>
+            <a href="/live-game">Live Chat and Game</a>
+            <a href="/puzzle-squares">Puzzle Squares</a>
+          </div>
+        </li>
+      </ul>
+    </nav>
   <div class="parallax"></div>
   <h1 id="square-pixel">Square Pixel</h1>
   <script>
