--- a/square-pixels.html
+++ b/square-pixels.html
@@ -289,7 +289,7 @@
     <img src="https://github.com/Unlim8ted-Studio-Productions/Square-Pixels/assets/138305056/2fc9957c-76ef-4ab4-b819-1cd0614d2bcc" class="parallax-image" alt="Inventory">
   </div>
   <div class="parallax-container">
-    <video src="https://github.com/GusInfiniteLinesOfCode/Terraria_styled_game/assets/101442959/60913d36-27a7-488d-8ccb-946445185283" class="parallax-image" alt="Procedural Generation">
+    <video src="https://github.com/GusInfiniteLinesOfCode/Terraria_styled_game/assets/101442959/60913d36-27a7-488d-8ccb-946445185283" class="parallax-image" alt="Procedural Generation" autoplay loop muted>
   </div>
   <div class="parallax-container">
     <img src="\images\products\software\img.png" class="parallax-image" alt="Character Creator">
