--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
               <a href="#" class="fa fa-twitter"></a>
               <a href="#" class="fa fa-google"></a>
               <a href="#" class="fa fa-linkedin"></a>
-              <a href="#" class="fa fa-youtube"></a>
+              <a href="https://www.youtube.com/@unlim8tedstudioproductions" class="fa fa-youtube"></a>
               <a href="#" class="fa fa-instagram"></a>
               <a href="#" class="fa fa-pinterest"></a>
               <a href="#" class="fa fa-snapchat-ghost"></a>
@@ -390,9 +390,9 @@
               <a href="#" class="fa fa-stumbleupon"></a>
               <a href="#" class="fa fa-flickr"></a>
               <a href="#" class="fa fa-yahoo"></a>
-              <a href="#" class="fa fa-reddit"></a>
+              <a href="https://www.reddit.com/user/Unlim8tedStudios/" class="fa fa-reddit"></a>
               <a href="#" class="fa fa-rss"></a>
-              <a href="#" class="fa fa-github"></a>
+              <a href="https://github.com/Unlim8ted-Studio-Productions" class="fa fa-github"></a>
 
             </div>
             <!-- Newsletter Signup -->
