--- a/index.html
+++ b/index.html
@@ -292,9 +292,9 @@
           </a>
         </div>
 
-        <div class="text" id="header" style="position:absolute; top:-20%;left:10px; right:10px;">Unlim8ted Studio
+        <div class="text" id="header" style="position:absolute; top:-10%;left:10px; right:10px;">Unlim8ted Studio
           Productions</div>
-        <svg class="waves" id="header-back" style="z-index: 1; position:absolute; top:-10%"
+        <svg class="waves" id="header-back" style="z-index: 1; position:absolute; top:-30%"
           xmlns="http://www.w3.org/2000/svg" width="1440" height="321.75" viewBox="0 200 960 214.5"
           preserveAspectRatio="xMinYMid meet">
           <defs>
@@ -776,7 +776,7 @@
   <div id="contact" class="content-section">
     <h1>Contact Us</h1>
     <p>For any inquiries or support, feel free to reach out to us.</p>
-    <p>Email: <a href="mailto:help@unlim8ted.com">help@unlim8ted.com</a></p>
+    <p>Email: <a href="mailto:support@unlim8ted.com">support@unlim8ted.com</a></p>
     <form action="/submit_form" method="post">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required>
