--- a/puzzle-squares.html
+++ b/puzzle-squares.html
@@ -255,9 +255,26 @@
       }
     </style>
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-
+    <style>  /* logo */
+        .logo {
+            position: absolute;
+            z-index: 1;
+            top: 3rem;
+            left: 3rem;
+            display: block;
+        }
+        
+        .logo img {
+            height: 140px;
+        }</style>
   </head>
 <html>
+    <div id="inner-wrap">
+        <div class="logo" style="z-index: 2;">
+          <a href="/">
+            <img src="images/logo/logo.png"> <!--https://images.unlim8ted.com/logo/logo.png-->
+          </a>
+        </div>
     <nav class="navbar">
         <ul class="nav-links">
           <li class="nav-item"><a href="/">Home</a></li>
