--- a/square-pixels.html
+++ b/square-pixels.html
@@ -118,7 +118,12 @@
     }
   </style>
     <link rel="stylesheet" href="styles.css">
-
+    <div id="inner-wrap">
+      <div class="logo" style="z-index: 2;">
+        <a href="/">
+          <img src="images/logo/logo.png"> <!--https://images.unlim8ted.com/logo/logo.png-->
+        </a>
+      </div>
     <nav class="navbar">
       <ul class="nav-links">
         <li class="nav-item"><a href="/">Home</a></li>
@@ -138,6 +143,18 @@
         </li>
       </ul>
     </nav>
+    <style>  /* logo */
+      .logo {
+          position: absolute;
+          z-index: 1;
+          top: 3rem;
+          left: 3rem;
+          display: block;
+      }
+      
+      .logo img {
+          height: 140px;
+      }</style>
   <div class="parallax"></div>
   <h1 id="square-pixel">Square Pixel</h1>
   <script>
