--- a/502.html
+++ b/502.html
@@ -54,8 +54,26 @@
             margin-top: 20px;
         }
     </style>
+    <style>  /* logo */
+        .logo {
+            position: absolute;
+            z-index: 1;
+            top: 3rem;
+            left: 3rem;
+            display: block;
+        }
+        
+        .logo img {
+            height: 140px;
+        }</style>
 </head>
 <body>
+    <div id="inner-wrap">
+        <div class="logo" style="z-index: 2;">
+          <a href="/">
+            <img src="images/logo/logo.png"> <!--https://images.unlim8ted.com/logo/logo.png-->
+          </a>
+        </div>
     <div class="container">
         <h1>502 Bad Gateway</h1>
         <p>Looks like something went wrong between the servers. Again. 🙄</p>
