--- a/50x.html
+++ b/50x.html
@@ -2,7 +2,18 @@
 <html>
 <head>
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-
+<style>  /* logo */
+    .logo {
+        position: absolute;
+        z-index: 1;
+        top: 3rem;
+        left: 3rem;
+        display: block;
+    }
+    
+    .logo img {
+        height: 140px;
+    }</style>
 <title>Error</title>
 <style>
 html { color-scheme: light dark; }
@@ -11,6 +22,12 @@ font-family: Tahoma, Verdana, Arial, sans-serif; }
 </style>
 </head>
 <body>
+    <div id="inner-wrap">
+        <div class="logo" style="z-index: 2;">
+          <a href="/">
+            <img src="images/logo/logo.png"> <!--https://images.unlim8ted.com/logo/logo.png-->
+          </a>
+        </div>
 <h1>An error occurred.</h1>
 <p>Sorry, the page you are looking for is currently unavailable.<br/>
 Please try again later.</p>
