--- a/live-chat.html
+++ b/live-chat.html
@@ -39,8 +39,26 @@
             background-color: #0056b3;
         }
     </style>
+    <style>  /* logo */
+        .logo {
+            position: absolute;
+            z-index: 1;
+            top: 3rem;
+            left: 3rem;
+            display: block;
+        }
+        
+        .logo img {
+            height: 140px;
+        }</style>
 </head>
 <body>
+    <div id="inner-wrap">
+        <div class="logo" style="z-index: 2;">
+          <a href="/">
+            <img src="images/logo/logo.png"> <!--https://images.unlim8ted.com/logo/logo.png-->
+          </a>
+        </div>
     <div class="container">
         <h1>Sorry!</h1>
         <p>Due to security concerns, we have decided to remove this feature.</p>
