--- a/success.html
+++ b/success.html
@@ -48,9 +48,26 @@
         }
     </style>
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-
+    <style>  /* logo */
+        .logo {
+            position: absolute;
+            z-index: 1;
+            top: 3rem;
+            left: 3rem;
+            display: block;
+        }
+        
+        .logo img {
+            height: 140px;
+        }</style>
 </head>
 <body>
+    <div id="inner-wrap">
+        <div class="logo" style="z-index: 2;">
+          <a href="/">
+            <img src="images/logo/logo.png"> <!--https://images.unlim8ted.com/logo/logo.png-->
+          </a>
+        </div>
     <div class="container">
         <h1>Success!</h1>
         <p>Your operation was completed successfully.</p>
