Revert "tried to fix wave back and text"
This reverts commit 2e6d50151ea2b397fe2ae1c1c7cb4915dfc14cf9.

--- a/index.html
+++ b/index.html
@@ -257,64 +257,6 @@
       background: black;
       color: white;
     }
-    @media (max-width: 1024px) {
-    .waves {
-        top: -25%;
-    }
-}
-
-@media (max-width: 768px) {
-    .waves {
-        top: -20%;
-    }
-    
-    .text {
-        font-size: 1.2rem;
-    }
-}
-
-@media (max-width: 480px) {
-    .waves {
-        top: -15%;
-    }
-
-    .text {
-        font-size: 1rem;
-    }
-}
-/* For screens 1536x426 */
-@media (min-width: 1536px) and (max-height: 426px) {
-    .text {
-        top: -10%;
-    }
-
-    .waves {
-        top: -30%;
-    }
-}
-
-/* For screens 800x1000 */
-@media (min-width: 800px) and (max-height: 1000px) {
-    .text {
-        top: 0%;
-    }
-
-    .waves {
-        top: -30%;
-    }
-}
-
-/* For screens 428x926 */
-@media (min-width: 428px) and (max-height: 926px) {
-    .text {
-        top: 5%;
-    }
-
-    .waves {
-        top: -40%;
-    }
-}
-
   </style>
 </head>
 
@@ -410,7 +352,7 @@
           </a>
         </div>
 
-        <div class="text" id="header" style="position:relative; top:-10%;left:10px; right:10px;">Unlim8ted Studio
+        <div class="text" id="header" style="position:absolute; top:-10%;left:10px; right:10px;">Unlim8ted Studio
           Productions</div>
         <svg class="waves" id="header-back" style="z-index: 1; position:absolute; top:-30%"
           xmlns="http://www.w3.org/2000/svg" width="1440" height="321.75" viewBox="0 200 960 214.5"
