--- a/index.html
+++ b/index.html
@@ -348,7 +348,8 @@
 
 <!-- Video Background -->
 <video autoplay muted loop id="backgroundVideo" style="position: absolute; top: 0; left: 0; width: 100%; height: auto; z-index: 1; object-fit: cover;">
-  <source src="images/back.mp4" type="video/mp4">
+  <canvas id="canvas" style="z-index:300"></canvas>
+<source id="video" src="images/back.webm" type="video/mp4">
   Your browser does not support the video tag.
 </video>
     <body>
