changed wheel text

--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
               const popupText = document.getElementById('popup-text');
               const popupLink = document.getElementById('popup-link');
       
-              popupText.innerHTML = `You've got: ${option.name}`;
+              popupText.innerHTML = `According to the wheel, you should go and get your very own ${option.name}`;
               popupLink.href = option.link;
               popupLink.innerHTML = 'Visit the page';
       
