--- a/puzzle-squares.html
+++ b/puzzle-squares.html
@@ -281,12 +281,6 @@
     
   </head>
 <html>
-    <div id="inner-wrap">
-        <div class="logo" style="z-index: 2;">
-          <a href="/">
-            <img src="images/logo/logo.png"> <!--https://images.unlim8ted.com/logo/logo.png-->
-          </a>
-        </div>
         <style>
 
             .dropdown-content {
@@ -1283,8 +1277,24 @@
 
 <body class="c27 doc-content">
     <div>
-        <p class="c0"><span class="c32">P</span><span class="c37">u</span><span class="c32">z</span><span class="c37">zle Squ</span><span class="c32">a</span><span class="c9 c25">re One</span></p>
-        <p class="c0 c18"><span class="c25 c31"></span></p>
+        <p class="c0 big-centered">
+            <span class="c32">P</span>
+            <span class="c37">u</span>
+            <span class="c32">z</span>
+            <span class="c37">zle Squ</span>
+            <span class="c32">a</span>
+            <span class="c9 c25">re One</span>
+        </p>
+        
+        <style>
+            .big-centered {
+                font-size: 36px; /* Adjust size as needed */
+                text-align: center;
+                font-weight: bold;
+                margin: 20px 0;
+            }
+        </style>
+                <p class="c0 c18"><span class="c25 c31"></span></p>
     </div>
     <p class="c0 c18"><span class="c9 c12"></span></p>
     <table class="c15">
