--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       display: none;
     }
   </style>
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 
   <link rel="stylesheet" href="styles.css">
   <style>
