--- a/puzzle-squares.html
+++ b/puzzle-squares.html
@@ -254,8 +254,8 @@
         color: white;
       }
     </style>
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <style>  
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <style>  
         /* logo */
         .logo {
             position: absolute;
