--- a/buy.html
+++ b/buy.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buy Now</title>
+    
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
@@ -126,7 +127,7 @@
         </div>
     <header>
         <h1>Buy Now</h1>
-        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     </header>
 
