--- a/square-pixels.html
+++ b/square-pixels.html
@@ -117,6 +117,8 @@
     height: auto;
     }
   </style>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
     <link rel="stylesheet" href="styles.css">
     <div id="inner-wrap">
       <div class="logo" style="z-index: 2;">
