--- a/success.html
+++ b/success.html
@@ -47,8 +47,8 @@
             background-color: #0056b3;
         }
     </style>
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <style>  
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <style>  
         /* logo */
         .logo {
             position: absolute;
