--- a/buy.html
+++ b/buy.html
@@ -127,7 +127,7 @@
         </div>
     <header>
         <h1>Buy Now</h1>
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
+        <link rel="icon" href="favicon.ico?" type="image/png">
 
     </header>
 
