--- a/textadventurecreator.html
+++ b/textadventurecreator.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico?" type="image/png">
 
 	<script src="ned.js"></script>
 	<script src="https://bumbu.me/svg-pan-zoom/dist/svg-pan-zoom.min.js"></script>
