--- a/50x.html
+++ b/50x.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <style>  
+    <link rel="icon" type="image/png" href="favicon.ico?">    <style>  
         /* logo */
         .logo {
             position: absolute;
