--- a/shop.html
+++ b/shop.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 <head>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico?" type="image/png">
 
 </head>
 
