--- a/square-pixels.html
+++ b/square-pixels.html
@@ -117,7 +117,7 @@
     height: auto;
     }
   </style>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico?" type="image/png">
 
     <link rel="stylesheet" href="styles.css">
     <div id="inner-wrap">
