--- a/squareproduct.html
+++ b/squareproduct.html
@@ -293,7 +293,7 @@
 <html lang="en">
 
 <head>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico?" type="image/png">
 
 </head>
 
