--- a/404.html
+++ b/404.html
@@ -94,4 +94,9 @@
         <p class="funny-text">P.S. Try checking under your couch. Maybe the page fell there. 🛋️</p>
     </div>
 </body>
+    <!-- Copyright -->
+    <div style="margin-top: 20px;">
+        <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+      </div>
+    </div>
 </html>
