--- a/502.html
+++ b/502.html
@@ -96,4 +96,9 @@
         <p class="funny-text">If refreshing doesn’t help, maybe go make a cup of tea? ☕</p>
     </div>
 </body>
+    <!-- Copyright -->
+    <div style="margin-top: 20px;">
+        <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+      </div>
+    </div>
 </html>
