--- a/50x.html
+++ b/50x.html
@@ -47,4 +47,9 @@ Please try again later.</p>
 the error log for details.</p>
 <p><em>Faithfully yours, nginx.</em></p>
 </body>
+    <!-- Copyright -->
+    <div style="margin-top: 20px;">
+        <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+      </div>
+    </div>
 </html>
