--- a/chat.html
+++ b/chat.html
@@ -82,4 +82,9 @@
         <button onclick="history.back()">Go Back</button>
     </div>
 </body>
+    <!-- Copyright -->
+    <div style="margin-top: 20px;">
+        <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+      </div>
+    </div>
 </html>
