--- a/index.html
+++ b/index.html
@@ -734,6 +734,11 @@
       
       </div>
     </div>
+        <!-- Copyright -->
+        <div style="margin-top: 20px;">
+          <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+        </div>
+      </div>
   </div>
 
   <div id="films" class="content-section">
@@ -764,6 +769,11 @@
       </a>
       <!-- Add more film items here -->
     </div>
+        <!-- Copyright -->
+        <div style="margin-top: 20px;">
+          <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+        </div>
+      </div>
   </div>
 
   <div id="music" class="content-section">
@@ -788,6 +798,11 @@
       </a>
       <!-- Add more music items here -->
     </div>
+        <!-- Copyright -->
+        <div style="margin-top: 20px;">
+          <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+        </div>
+      </div>
   </div>
 
   <div id="games" class="content-section">
@@ -822,6 +837,11 @@
       </a>
       <!-- Add more game items here -->
     </div>
+        <!-- Copyright -->
+        <div style="margin-top: 20px;">
+          <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+        </div>
+      </div>
   </div>
   <div id="books" class="content-section">
     <h1>Books</h1>
@@ -879,6 +899,11 @@
       </a>
       <!-- Add more book items here -->
     </div>
+        <!-- Copyright -->
+        <div style="margin-top: 20px;">
+          <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+        </div>
+      </div>
   </div>
 
 
@@ -978,6 +1003,11 @@
 
       <!-- Add more software items here -->
     </div>
+        <!-- Copyright -->
+        <div style="margin-top: 20px;">
+          <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+        </div>
+      </div>
   </div>
 
   <div id="AI" class="content-section">
@@ -997,6 +1027,11 @@
       </a>
       <!-- Add more music items here -->
     </div>
+        <!-- Copyright -->
+        <div style="margin-top: 20px;">
+          <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+        </div>
+      </div>
   </div>
   <!-- Help Section -->
   <div id="help" class="content-section">
