--- a/products.html
+++ b/products.html
@@ -687,7 +687,11 @@ function getCookie(key) {
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.1/js.cookie.min.js"></script>
 
 
-
+    <!-- Copyright -->
+    <div style="margin-top: 20px;">
+        <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+      </div>
+    </div>
 
 
     <!--<!DOCTYPE html>
