--- a/puzzle-squares.html
+++ b/puzzle-squares.html
@@ -1661,4 +1661,8 @@
     <p class="c0 c18"><span class="c9 c12"></span></p>
 
 
-</body></html>
+</body>    <!-- Copyright -->
+<div style="margin-top: 20px;">
+  <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+</div>
+</div></html>
