--- a/square-pixels.html
+++ b/square-pixels.html
@@ -429,3 +429,8 @@
   <p>Embark on a thrilling adventure in the realm of our pixelated sandbox game! Should you encounter any problems or have
     ideas for improvement, kindly share your feedback with us. Enjoy your gaming journey!
   </p>
+      <!-- Copyright -->
+      <div style="margin-top: 20px;">
+        <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+      </div>
+    </div>
