--- a/squareproduct.html
+++ b/squareproduct.html
@@ -1080,3 +1080,8 @@
             }
         replacePlaceholders();
     </script>
+    <!-- Copyright -->
+    <div style="margin-top: 20px;">
+      <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+    </div>
+  </div>
