--- a/success.html
+++ b/success.html
@@ -86,4 +86,9 @@
         <a href="javascript:history.back()" class="back-button">Go Back</a>
     </div>
 </body>
+    <!-- Copyright -->
+    <div style="margin-top: 20px;">
+        <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+      </div>
+    </div>
 </html>
