--- a/textadventurecreator.html
+++ b/textadventurecreator.html
@@ -249,4 +249,9 @@
 		// Load node functions from nodes.js
 	</script>
 </body>
+    <!-- Copyright -->
+    <div style="margin-top: 20px;">
+        <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+      </div>
+    </div>
 </html>
