--- a/buy.html
+++ b/buy.html
@@ -261,5 +261,9 @@
         }
     </script>
 </body>
-
+    <!-- Copyright -->
+    <div style="margin-top: 20px;">
+        <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+      </div>
+    </div>
 </html>
