--- a/cart.html
+++ b/cart.html
@@ -317,5 +317,9 @@
         document.addEventListener('DOMContentLoaded', displayCart);
     </script>
 </body>
-
+    <!-- Copyright -->
+    <div style="margin-top: 20px;">
+        <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+      </div>
+    </div>
 </html>
