fix video blocking scroll event

--- a/index.html
+++ b/index.html
@@ -609,8 +609,7 @@ window.onload = function () {
   <div id="home" class="content-section">
 
     <!-- Video Background -->
-    <video autoplay muted loop id="backgroundVideo"
-      style="position: absolute; top: 0; left: 0; width: 100%; height: auto; z-index: 1; object-fit: cover;">
+    <video autoplay="" muted="" loop="" id="backgroundVideo" style="position: absolute; top: 0; left: 0; width: 100%; height: auto; z-index: 1; object-fit: cover;pointer-events: none;">
       <canvas id="canvas" style="z-index:300"></canvas>
       <source id="video" src="images/back.webm" type="video/mp4">
       Your browser does not support the video tag.
